2005-12-12 Quentin Mathe <qmathe@club-internet.fr>

   * Source/Search/LCFieldSortedHitQueue.m:
    Fixed compilation on Linux (Ubuntu Linux x86) broken by the previous commit,
    float.h is not included by default on most platforms.
    Result: 49 classes, 112 methods, 352367 tests, 12 failed
    (Failed tests are located in TestWildcard.m)

2005-12-11 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Search/LCFieldCacheImpl.m:
   * Source/Search/LCFieldCache.m:
   * Headers/Search/LCFieldCacheImpl.h:
   * Headers/Search/LCFieldCache.h:
   Implement parsers.
   * Source/Search/LCFieldSortedHitQueue.m:
   * Source/Search/TestSort.m:
   Bugs fixed.
   * Pass all test units on Cocoa:
   Result: 49 classes, 111 methods, 352364 tests, 0 failed

2005-12-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Pass all test units on Cocoa:
   Result: 49 classes, 109 methods, 352235 tests, 0 failed.
   * Source/Search/LCBooleanQuery.m:
   * Source/Search/LCFuzzyQuery.m:
   * Source/Search/LCTermQuery.m:
   * Source/Search/LCPrefixQuery.m:
   Utilize LCStringFromBoost().
   * Source/Index/LCFieldsReader.m:
   Support omitNorms.
   * Source/Index/TestDocHelper.m:
   * Source/Index/TestDocHelper.h:
   * Source/Index/TestDocumentWriter.m:
   * Source/Index/TestFieldInfos.m:
   * Source/Index/TestFieldsReader.m:
   * Source/Index/TestMultiReader.m:
   * Source/Index/TestSegmentReader.m:
   * Source/Index/TestSegmentReader.h:
   * Source/Index/TestSegmentMerger.m:
   Test omitNorms.
   (Unit test failed on TestSegmentMerger: FIXED).
   * Source/Search/TestWildcardQuery.m:
   * Source/Search/TestCheckHits.m:
   * Source/Search/TestCheckHits.h:
   * Source/Index/TestDocumentWriter.m:
   Add unit tests.
   

2005-12-09 Yen-Ju Chen <yjchenx at gmail _dot_ com>

   * Source/Index/LCSegmentMergeInfo.m:
   Load docMap and postings only when needed.
   * Source/Document/LCField.m:
   * Source/Index/LCDocumentWriter.m:
   * Source/Index/LCFieldInfo.m:
   * Source/Index/LCFieldInfos.m: