@@ -1,6 +1,7 @@
 #ifndef __Lucene_Kit__
 #define __Lucene_Kit__
 
+#include "LCSmallFloat.h"
 #include "LCBitVector.h"
 #include "LCPriorityQueue.h"
 #include "NSString+Additions.h"
