@@ -133,10 +133,13 @@
 - (BOOL) deleteFile: (NSString *) name
 {
 	NSString *p = [path stringByAppendingPathComponent: name];
-	if ([manager removeFileAtPath: p handler: nil] == NO)
+    if ([manager fileExistsAtPath: p] == YES)
     {
+	if ([manager removeFileAtPath: p handler: nil] == NO)
+    	{
 		NSLog(@"Cannot remove file %@", p);
 		return NO;
+	}
     }
 	return YES;
 }
